Adds more convenient hooks

--- a/plugin.xml
+++ b/plugin.xml
@@ -10,4 +10,9 @@
   <repo>https://github.com/akofman/cordova-plugin-add-swift-support.git</repo>
 
   <hook type="after_prepare" src="src/add-swift-support.js" />
+
+  <platform name="ios">
+    <hook type="after_platform_add" src="src/add-swift-support.js" />
+    <hook type="after_plugin_add" src="src/add-swift-support.js" />
+  </platform>
 </plugin>
