--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "xcode"
   ],
   "devDependencies": {
-    "eslint": "^2.2.0"
+    "eslint": "^3.4.0",
+    "eslint-config-standard": "^6.0.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-standard": "^2.0.0"
   }
 }
