--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "eslint-config-standard": "^6.0.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.0"
+  },
+  "scripts": {
+    "test": "eslint src"
   }
 }
