--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-add-swift-support",
-  "version": "1.7.2",
+  "version": "2.0.0",
   "description": "Add Swift support to your iOS plugins",
   "homepage": "https://github.com/akofman/cordova-plugin-add-swift-support",
   "author": {
@@ -28,20 +28,21 @@
     "cordova:plugin"
   ],
   "license": "Apache-2.0",
+  "dependencies": {
+    "glob": "^7.1.3",
+    "semver": "^6.0.0",
+    "xcode": "^2.0.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.13.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "webpack": "^2.2.0-rc.3",
-    "xcode": "0.9.1"
+    "acorn": "^6.1.1",
+    "eslint": "^5.15.3",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
     "test": "eslint src"
   }
 }
