--- a/plugin.xml
+++ b/plugin.xml
@@ -6,15 +6,15 @@
   <description>Cordova plugin to add swift support</description>
   <keywords>cordova,phonegap,swift,plugin</keywords>
   <repo>https://github.com/akofman/cordova-plugin-add-swift-support.git</repo>
-
-  <hook type="after_prepare" src="src/add-swift-support.js" />
-
+  <hook type="before_plugin_install" src="src/dependencyInstaller.js"/>
   <platform name="ios">
-    <hook type="after_platform_add" src="src/add-swift-support.js" />
-    <hook type="after_plugin_add" src="src/add-swift-support.js" />
+    <hook src="src/add-swift-support.js" type="after_prepare" />
+    <hook src="src/add-swift-support.js" type="after_platform_add" />
+    <hook src="src/add-swift-support.js" type="after_plugin_add" />
   </platform>
   <platform name="osx">
-    <hook type="after_platform_add" src="src/add-swift-support.js" />
-    <hook type="after_plugin_add" src="src/add-swift-support.js" />
+    <hook src="src/add-swift-support.js" type="after_prepare" />
+    <hook src="src/add-swift-support.js" type="after_platform_add" />
+    <hook src="src/add-swift-support.js" type="after_plugin_add" />
   </platform>
 </plugin>
